--- a/desktop-client/electron-builder.yml
+++ b/desktop-client/electron-builder.yml
@@ -12,7 +12,7 @@ files:
 asarUnpack:
   - prod-deps/**
 win:
-  executableName: desktop-client
+  executableName: llmmask
 nsis:
   artifactName: ${name}-${version}-setup.${ext}
   shortcutName: ${productName}
