Improve chat msg rendering

--- a/desktop-client/package.json
+++ b/desktop-client/package.json
@@ -27,10 +27,13 @@
     "electron-log": "^5.4.2",
     "electron-updater": "^6.3.9",
     "jose": "^6.0.12",
+    "katex": "^0.16.22",
     "lucide-react": "^0.539.0",
     "openai": "^5.12.2",
     "react-markdown": "^10.1.0",
-    "react-syntax-highlighter": "^15.6.1"
+    "react-syntax-highlighter": "^15.6.1",
+    "rehype-katex": "^7.0.1",
+    "remark-math": "^6.0.0"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config-prettier": "^3.0.0",
