--- a/desktop-client/package.json
+++ b/desktop-client/package.json
@@ -25,6 +25,7 @@
     "@electron-toolkit/preload": "^3.0.2",
     "@electron-toolkit/utils": "^4.0.0",
     "electron-log": "^5.4.2",
+    "electron-store": "^8.2.0",
     "electron-updater": "^6.3.9",
     "jose": "^6.0.12",
     "katex": "^0.16.22",
